--- a/app/src/main/res/layout/activity_mscalendar_section.xml
+++ b/app/src/main/res/layout/activity_mscalendar_section.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".myspalon.MSCalendarSectionActivity">
@@ -46,13 +47,50 @@
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <DatePicker
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@color/birdcolor"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        <DatePicker
+            style="@style/GreenDatePicker"
+            android:headerBackground="@color/birdcolor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Appointments"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="@color/birdcolor"
+        android:textStyle="bold"
+        android:padding="@dimen/sd4"
+        android:textSize="@dimen/sd12"
+        android:textColor="@color/white"
+        />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="bottom"
+        >
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        android:textColor="@color/white"
+    android:id="@+id/ms_add_appointment"
+        android:textStyle="bold"
+        android:backgroundTint="@color/birdcolor"
+        android:layout_margin="@dimen/sd8"
+        />
+    </LinearLayout>
+</LinearLayout>
