--- a/app/src/main/res/layout/activity_msadd_appointment.xml
+++ b/app/src/main/res/layout/activity_msadd_appointment.xml
@@ -125,122 +125,100 @@
                           android:inputType="text"
                           android:padding="10dp" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Mobile"
-                        android:textColor="@color/birdcolor" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_margin="5dp"-->
+<!--                        android:text="Mobile"-->
+<!--                        android:textColor="@color/birdcolor" />-->
 
-                    <EditText
-                        android:id="@+id/input_mobile"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="4dp"
-                        android:background="@drawable/edittextborderwhite"
-                        android:hint="Mobile Numebr"
-                        android:inputType="text"
-                        android:padding="10dp" />
+<!--                    <EditText-->
+<!--                        android:id="@+id/input_mobile"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:layout_margin="4dp"-->
+<!--                        android:background="@drawable/edittextborderwhite"-->
+<!--                        android:hint="Mobile Numebr"-->
+<!--                        android:inputType="text"-->
+<!--                        android:padding="10dp" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Email Address"
-                        android:textColor="@color/birdcolor" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_margin="5dp"-->
+<!--                        android:text="Email Address"-->
+<!--                        android:textColor="@color/birdcolor" />-->
 
-                    <EditText
-                        android:id="@+id/input_quali"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="4dp"
-                        android:background="@drawable/edittextborderwhite"
-                        android:hint="Email Address"
-                        android:inputType="text"
-                        android:padding="10dp" />
+<!--                    <EditText-->
+<!--                        android:id="@+id/input_quali"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:layout_margin="4dp"-->
+<!--                        android:background="@drawable/edittextborderwhite"-->
+<!--                        android:hint="Email Address"-->
+<!--                        android:inputType="text"-->
+<!--                        android:padding="10dp" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Gender"
-                        android:textColor="@color/birdcolor" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_margin="5dp"-->
+<!--                        android:text="Gender"-->
+<!--                        android:textColor="@color/birdcolor" />-->
 
-                    <RadioGroup
-                        android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content">
-
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:hint="Male" />
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:hint="Female" />
+<!--                    <RadioGroup-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:orientation="horizontal"-->
+<!--                        android:layout_height="wrap_content">-->
 
 
-                    </RadioGroup>
+<!--                        <RadioButton-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:hint="Male" />-->
+
+<!--                        <RadioButton-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:hint="Female" />-->
 
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        >
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:text="Age"
-                        android:textColor="@color/birdcolor" />
+<!--                    </RadioGroup>-->
 
-                    <EditText
-                        android:id="@+id/input_profession"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="4dp"
-                        android:background="@drawable/edittextborderwhite"
-                        android:hint="age"
-                        android:inputType="text"
-                        android:padding="10dp" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Years"
-            android:textColor="@color/birdcolor" />
+<!--<LinearLayout-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:orientation="horizontal"-->
+<!--    >-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:layout_weight="1"-->
+<!--        >-->
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_margin="5dp"-->
+<!--                        android:text="DOB"-->
+<!--                        android:textColor="@color/birdcolor" />-->
 
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="4dp"
-            android:background="@drawable/edittextborderwhite"
-            android:inputType="text"
-            android:padding="10dp" />
-    </LinearLayout>
-</LinearLayout>
+<!--        <EditText-->
+<!--            android:id="@+id/input_profession"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="4dp"-->
+<!--            android:background="@drawable/edittextborderwhite"-->
+<!--            android:hint="dob"-->
+<!--            android:inputType="text"-->
+<!--            android:padding="10dp" />-->
+<!--    </LinearLayout>-->
+
+<!--</LinearLayout>-->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
