--- a/app/src/main/res/layout/activity_msbeauticians.xml
+++ b/app/src/main/res/layout/activity_msbeauticians.xml
@@ -44,6 +44,7 @@
                 android:gravity="center_vertical">
 
                 <ImageButton
+                    android:id="@+id/backAppbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
@@ -63,6 +64,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/beauticianRV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
