--- a/app/src/main/res/layout/activity_msadd_customers.xml
+++ b/app/src/main/res/layout/activity_msadd_customers.xml
@@ -7,7 +7,7 @@
     tools:context=".myspalon.MSAddCustomers">
 
     <!-- <de.hdodenhof.circleimageview.CircleImageView
-       android:id="@+id/circleImageView2"
+       android:id="@+id/cust_circleImageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
@@ -20,11 +20,11 @@
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_camera"
-       app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
-       app:layout_constraintEnd_toEndOf="@+id/circleImageView2" />-->
+       app:layout_constraintBottom_toBottomOf="@+id/cust_circleImageView2"
+       app:layout_constraintEnd_toEndOf="@+id/cust_circleImageView2" />-->
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/cust_appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/cust_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/birdcolor"
@@ -69,11 +69,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        app:layout_constraintTop_toBottomOf="@+id/cust_appBarLayout"
         app:layout_constraintVertical_bias="0.5">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView3"
+            android:id="@+id/cust_cardView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
@@ -81,7 +81,7 @@
             app:cardElevation="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title">
+            app:layout_constraintTop_toBottomOf="@+id/cust_tv_title">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,7 +97,7 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_medicineET"
+                    android:id="@+id/cust_input_medicineET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -116,7 +116,7 @@
                       android:textColor="@color/birdcolor" />
 
                   <EditText
-                      android:id="@+id/input_fullname"
+                      android:id="@+id/cust_input_fullname"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
@@ -135,7 +135,7 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_mobile"
+                    android:id="@+id/cust_input_mobile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -153,7 +153,7 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_email"
+                    android:id="@+id/cust_input_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -176,11 +176,13 @@
 
 
                     <RadioButton
+                        android:id="@+id/cust_maleRB"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Male" />
 
                     <RadioButton
+                        android:id="@+id/cust_femaleRB"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="Female" />
@@ -196,18 +198,24 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_dob"
+                    android:id="@+id/cust_input_dob"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="4dp"
                     android:background="@drawable/edittextborderwhite"
-                    android:editable="false"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="15 May 1997"
                     android:inputType="text"
                     android:padding="10dp" />
 
+
+
                 <CheckBox
+                    android:id="@+id/cust_appointmentCB"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Book Appointment" />
@@ -220,6 +228,12 @@
                     app:iconifiedByDefault="true" />
 
 
+                <LinearLayout
+                    android:id="@+id/cust_appointLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -228,7 +242,7 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_app_date"
+                    android:id="@+id/cust_input_app_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -246,7 +260,7 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_profession"
+                    android:id="@+id/cust_input_profession"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -264,7 +278,7 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_experience"
+                    android:id="@+id/cust_input_experience"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -282,7 +296,7 @@
                     android:textColor="@color/birdcolor" />
 
                 <EditText
-                    android:id="@+id/input_appointment"
+                    android:id="@+id/cust_input_appointment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -291,9 +305,10 @@
                     android:hint="reason"
                     android:inputType="text"
                     android:padding="10dp" />
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/tv_submit"
+                    android:id="@+id/cust_tv_submit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -309,11 +324,11 @@
                     android:textColor="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/cust_cardView3" />
 
 
                 <TextView
-                    android:id="@+id/tv_import"
+                    android:id="@+id/cust_tv_import"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -328,7 +343,7 @@
                     android:textColor="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/cust_cardView3" />
 
 
             </LinearLayout>
