--- a/app/src/main/res/layout/activity_msedit_profile.xml
+++ b/app/src/main/res/layout/activity_msedit_profile.xml
@@ -114,7 +114,7 @@
                 android:layout_margin="4dp"
                 android:background="@drawable/edittextborderwhite"
                 android:inputType="text"
-                android:padding="10dp" />
+                android:minHeight="40dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
