--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -1,5 +1,8 @@
 <!-- spinner_dropdown_item.xml -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="3dp" />
+    android:textColor="@color/black"
+    android:textSize="18sp"
+    android:padding="@dimen/sd2"
+    android:paddingStart="@dimen/sd8"/>
