--- a/app/src/main/res/layout/activity_msservice.xml
+++ b/app/src/main/res/layout/activity_msservice.xml
@@ -68,7 +68,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/MSListserviceRV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
