--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="lightgreen3">#E2F6E3</color>
     <color name="midgreen">#AAE1BC</color>
     <color name="darkmidgreen">#90CDA4</color>
-    <color name="birdcolor">#8FCD39</color>
+    <color name="birdcolor">#8FCF79</color>
     <color name="lightbirdcolor">#F4F6F3</color>
     <color name="darkgreen">#0C805F</color>
     <color name="lightmidgreen">#CCF3D2</color>
