--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -25,6 +25,7 @@
             android:src="@drawable/success_icon" />
 
         <TextView
+            android:id="@+id/successMsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/sd8"
